# WhyCremisi

./: .gitignore  BUILD_ORGANIZATION.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  NOTICE  PENDING_TODO.md  PHILOSOPHY.md  README.md  STATUS.md  TEST-GUIDE.md  WORKFLOW.md
Antigravity-Research/: MASTER-REPORT.md
Antigravity-Research/tests/: PRO-VALIDATION-LOG.md  TEST-DIFFERENCES-LOG.md
Documentazione/: 00-INDICE.md  01-EXECUTIVE-SUMMARY.md  02-ANALISI-MERCATO.md  04-SPECIFICHE-TECNICHE.md  07-CHANGELOG.md  09-GUIDA-SVILUPPO.md  architettura-ponte.md  protocol-json-v1.md
Research/EN/: 00-INDEX.md
Research/EN/papers/: 05-COMMUNICATION-PROTOCOL.md
Research/EN/txt/: 00-INDEX.txt  01-MANIFESTO-VISION.txt  02-SYSTEM-ARCHITECTURE.txt  03-THIRD-PARTY-PLUGIN-CONTROL.txt  04-AGENT-MEMORY-SYSTEM.txt  05-COMMUNICATION-PROTOCOL.txt  06-IMPLEMENTATION-ROADMAP.txt  07-BRAND-ASSETS.txt
Research/IT/: 02-ARCHITETTURA-SISTEMA.md
Research/IT/papers/: 01-MANIFESTO-VISIONE.md  04-SISTEMA-MEMORIA-AGENTE.md  05-PROTOCOLLO-COMUNICAZIONE.md  06-ROADMAP-IMPLEMENTAZIONE.md  07-ASSET-BRAND.md
Research/IT/txt/: 00-INDICE.txt  01-MANIFESTO-VISIONE.txt  02-ARCHITETTURA-SISTEMA.txt  03-CONTROLLO-PLUGIN-TERZE-PARTI.txt  04-SISTEMA-MEMORIA-AGENTE.txt  05-PROTOCOLLO-COMUNICAZIONE.txt  06-ROADMAP-IMPLEMENTAZIONE.txt  07-ASSET-BRAND.txt
Research/inglese/markdown/: 00-INDEX.md  01-MANIFESTO-VISION.md  06-IMPLEMENTATION-ROADMAP.md  08-DSP-ENGINE.md  14-USER-GUIDE.md
Research/inglese/testo/: 00-INDEX.txt  01-MANIFESTO-VISION.txt  02-SYSTEM-ARCHITECTURE.txt  03-THIRD-PARTY-PLUGIN-CONTROL.txt  04-AGENT-MEMORY-SYSTEM.txt  05-COMMUNICATION-PROTOCOL.txt  06-IMPLEMENTATION-ROADMAP.txt  07-BRAND-ASSETS.txt  08-DSP-ENGINE.txt  09-AI-ARCHITECTURE.txt  10-SECURITY-DATA-MODEL.txt  11-TESTING-QA.txt  12-DEPLOYMENT-DISTRIBUTION.txt  13-PLUGIN-DATABASE-SCHEMA.txt  14-USER-GUIDE.txt  15-DEVELOPER-GUIDE.txt
Research/italiano/markdown/: 00-INDICE.md  03-CONTROLLO-PLUGIN-TERZE-PARTI.md  08-ANALIZZATORE-DSP.md  10-SICUREZZA-MODELLO-DATI.md  12-DEPLOY-DISTRIBUZIONE.md  15-GUIDA-SVILUPPATORI.md
Research/italiano/testo/: 00-INDICE.txt  01-MANIFESTO-VISIONE.txt  02-ARCHITETTURA-SISTEMA.txt  03-CONTROLLO-PLUGIN-TERZE-PARTI.txt  05-PROTOCOLLO-COMUNICAZIONE.txt  09-ARCHITETTURA-AI.txt  10-SICUREZZA-MODELLO-DATI.txt  11-TEST-QUALITA.txt  13-SCHEMA-DATABASE-PLUGIN.txt  15-GUIDA-SVILUPPATORI.txt
Research/logo/: .gitignore  AUDIO-REACTIVE-SPEC.md  LOGO-GUIDELINES.md  build-icon-apple.js  build-icons.js  package-lock.json  package.json
Research/logo/platform/: WhyCremisi.icns
Research/logo/platform/favicon/: favicon-snippet.html
Research/markdown/EN/: 03-THIRD-PARTY-PLUGIN-CONTROL.md
Research/markdown/IT/: 00-INDICE.md
Research/template/: build.js  build_pdfs.sh  package-lock.json  package.json  whycremisi.css  whycremisi.typ
Tools/: README_BOILERPLATE.md
WhyCremisi-Design/whycremisi-site/: index.html
build-rel/: WhyCremisiVSTPlugin_vst3_helper
build-rel/JUCE/: JUCEExportConfig.cmake
build-rel/JUCE/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake
docs/: ARCHITECTURE.md  BUILD-GUIDE.md  QUICKSTART-IT.md  ROADMAP.md  STATUS.md  WORKFLOW.md  index.html
docs/italiano/markdown/: 09-ARCHITETTURA-AI.md  11-TEST-QUALITA.md  13-SCHEMA-DATABASE-PLUGIN.md  14-GUIDA-UTENTE.md
docs/italiano/testo/: 04-SISTEMA-MEMORIA-AGENTE.txt  06-ROADMAP-IMPLEMENTAZIONE.txt  07-ASSET-BRAND.txt  08-ANALIZZATORE-DSP.txt  12-DEPLOY-DISTRIBUZIONE.txt  14-GUIDA-UTENTE.txt
docs/product/: 02-SYSTEM-ARCHITECTURE.md  04-AGENT-MEMORY-SYSTEM.md  07-BRAND-ASSETS.md  09-AI-ARCHITECTURE.md  10-SECURITY-DATA-MODEL.md  11-TESTING-QA.md  12-DEPLOYMENT-DISTRIBUTION.md  13-PLUGIN-DATABASE-SCHEMA.md  15-DEVELOPER-GUIDE.md
docs/project/: 03-ROADMAP-FASI.md  05-REQUISITI.md  06-BRAINSTORMING.md  08-COLLABORAZIONE-HB.md  NOTE_TECNICHE_PROTOCOLI.md
src/agent/: AgentIdentity.cpp  AgentSoul.cpp  AgentSoul.h  PersonalityCore.h
src/ai/: AIProvider.cpp  AIProvider.h  AiEngine.cpp  AiEngine.h  ToolRegistry.cpp  ToolRegistry.h
src/bridge/: OscBridge.cpp  OscBridge.h  WebSocketServer.cpp  WebSocketServer.h
src/bridge/tests/: OscBridgeTest.cpp
src/core/: AgentIdentity.h  AgentUser.cpp  AgentUser.h  AgentWorkspace.cpp  AgentWorkspace.h  ParameterMapper.cpp  ParameterMapper.h  PersonalityCore.cpp  PluginChain.cpp  PluginChain.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SessionManager.cpp  SessionManager.h
src/core/tests/: PluginProcessorTest.cpp
src/daw/: AbletonDawHandler.cpp  AbletonDawHandler.h  DawDetector.cpp  DawDetector.h  IDawHandler.h  ReaperDawHandler.cpp  ReaperDawHandler.h
src/debug/: TerminateHook.h
src/dsp/: Analyzer.cpp  Analyzer.h  Compressor.cpp  Compressor.h  DSPEngine.cpp  DSPEngine.h  EQBand.cpp  EQBand.h  Limiter.cpp  Limiter.h
src/midi/: MidiHandler.cpp  MidiHandler.h
src/osc/: OscHandler.cpp  OscHandler.h
src/ui/: WebViewBridge.cpp  WebViewBridge.h
test_tools/: MOCK_SERVER_README.md  mock_ai_server.py  mock_osc_server.py  test_protocol_json.py
tests/: mock_ableton_osc.py  mock_websocket_server.py  pro_integration_test.py  test_websocket_bridge.py
tests/ai-validation/analysis/: PROTOCOL-V1.md
tests/ai-validation/tests/: AI-STRESS-TEST.md  TEST-TEMPLATE.md
webview-ui/: index.html
webview-ui/public/: site.webmanifest
webview-ui/src/: App.jsx  index.css  whycremisi-bridge.js
webview-ui/src/boxes/: BoxChat.jsx  BoxContext.js  CompressorBox.jsx  EqBox.jsx  MetricsBox.jsx  SpectralBox.jsx  VectorscopeBox.jsx  index.js
webview-ui/src/boxes/shared/: BoxWrapper.jsx
webview-ui/src/components/: BotFace.jsx  MaskLogo.jsx  SessionPanel.jsx  SetupScreen.jsx  Toolbox.jsx  WidgetButton.jsx  WidgetKnob.jsx  WidgetSlider.css  WidgetSlider.jsx
webview-ui/src/panels/: AdvisoryBox.jsx  ClippingBox.jsx  KnobBox.jsx  LoudnessBox.jsx  SliderBox.jsx  StereoscopeBox.jsx  TransportBox.jsx
webview-ui/src/panels/shared/: MetricBar.jsx
